--- a/src/app/shared/components/product/product-eleven/product-eleven.component.html
+++ b/src/app/shared/components/product/product-eleven/product-eleven.component.html
@@ -5,7 +5,7 @@
                 <span class="product-label label-top" *ngIf="product.top">Top</span>
                 <span class="product-label label-out" *ngIf="product.qty || product.qty == 0">Out Of Stock</span>
 
-                <a [routerLink]="['/product/'+product.category.name+'/'+ product.productUrl]">
+                <a [routerLink]="['/product/'+product.category.categoryUrl+'/'+ product.productUrl]">
             <molla-image [src]="product.image" alt="Product"
                         
                 
@@ -48,7 +48,7 @@
             </span>
         </div>
         <h3 class="product-title">
-            <a [routerLink]="['/product/'+product.category.name+'/'+ product.productUrl]">{{product.name | titlecase }}</a>
+            <a [routerLink]="['/product/'+product.category.categoryUrl+'/'+ product.productUrl]">{{product.name | titlecase }}</a>
         </h3>
         <!-- <div class="product-price"><i class="fa-solid fa-indian-rupee-sign"></i>{{product.defaultPrice}}</div> -->
         <div class="product-price">
