--- a/src/app/shared/components/product/product-six/product-six.component.html
+++ b/src/app/shared/components/product/product-six/product-six.component.html
@@ -5,7 +5,7 @@
         <span class="product-label label-top" *ngIf="product.top">Top</span> -->
       
 
-        <a [routerLink]="['/product/'+product.category.name+'/'+ product.productUrl]">
+        <a [routerLink]="['/product/'+product.category.categoryUrl+'/'+ product.productUrl]">
             <molla-image [src]="product.image" alt="Product" class="product-image">
             </molla-image>
         </a>
@@ -25,7 +25,7 @@
         </div>
 
          <div class="product-action" *ngIf="product.stock && product.stock !== 0">
-            <a [routerLink]="['/product/'+product.category.name+'/'+ product.name]" class="btn-product btn-cart btn-select"
+            <a [routerLink]="['/product/'+product.category.categoryUrl+'/'+ product.name]" class="btn-product btn-cart btn-select"
                 *ngIf="product.variants.length > 0 else cartBlock">
                 <span>select options</span>
             </a>
@@ -39,7 +39,7 @@
 
     <div class="product-body">
         <h3 class="product-title">
-            <a [routerLink]="['/product/'+product.category.name+'/'+ product.productUrl]">{{ product.name }}</a>
+            <a [routerLink]="['/product/'+product.category.categoryUrl+'/'+ product.productUrl]">{{ product.name }}</a>
         </h3>
 
         <div class="product-price" *ngIf="!product.stock || product.stock == 0 else elseBlock">
