--- a/src/app/shared/components/product/product-twelve/product-twelve.component.html
+++ b/src/app/shared/components/product/product-twelve/product-twelve.component.html
@@ -3,7 +3,7 @@
         <span class="product-label label-circle label-new">New</span>
 
 
-        <a [routerLink]="['/product/'+product.category.name+'/'+ product.productUrl]" *ngIf="product">
+        <a [routerLink]="['/product/'+product.category.categoryUrl+'/'+ product.productUrl]" *ngIf="product">
             <molla-image [src]="product['image']" alt="Product" class="product-image"
                 *ngIf="product['productImage'][0]">
             </molla-image>
@@ -26,7 +26,7 @@
             <a [routerLink]="['/shop/sidebar/3cols/']" [queryParams]="{category: product.category.id,'page':1}">{{
                 product['category']['name'] }}</a>
                 <div class="select-options" *ngIf="product">
-                    <button class="btn" [routerLink]="['/product/'+product.category.name+'/'+ product.name]" *ngIf="product.variants.length > 0 else cartBlock">
+                    <button class="btn" [routerLink]="['/product/'+product.category.categoryUrl+'/'+ product.name]" *ngIf="product.variants.length > 0 else cartBlock">
                         <img src="./assets/images/icons/add-to-basket.png" class="img-fluid">
                         Select Options
                     </button>
@@ -39,7 +39,7 @@
         </div>
 
         <h3 class="product-title">
-            <a [routerLink]="['/product/'+product.category.name+'/'+ product.productUrl]">{{ product.name }}</a>
+            <a [routerLink]="['/product/'+product.category.categoryUrl+'/'+ product.productUrl]">{{ product.name }}</a>
         </h3>
         <div class="product-price">
             <span class="new-price">Rs. {{ product.defaultPrice }}</span>
