--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -13,7 +13,7 @@
 
     <molla-home-slider></molla-home-slider>
 
-    <molla-modal-basic></molla-modal-basic>
+    <!-- <molla-modal-basic></molla-modal-basic> -->
 
     <!--  bootstrap slider component end  -->
 
@@ -79,7 +79,7 @@
     <div class="second-section container position-relative">
         <div class="row">
             <div class="col-sm-6 mb-2"
-                routerLink="/product/Keyboard%20Mouse/Geonix%20Wireless%20keyboard%20mouse%20combo-%20GXWBK-01%20GXWBM-01">
+                routerLink="/product/keyboard-mouse/geonix-wireless-keyboard-mouse-combo--gxwbk-01-gxwbm-01">
                 <div class="product-image one">
 
                 </div>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="col-sm-6 mb-2"
-                routerLink="/product/Keyboard%20Mouse/Geonix%20Wired%20keyboard%20mouse%20combo-GXBK-01%20GXBM-01">
+                routerLink="/product/keyboard-mouse/geonix-wired-keyboard-mouse-combo-gxbk-01-gxbm-01">
                 <div class="product-image four">
 
                 </div>
