--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1170,7 +1170,7 @@ a{
 }
 
 .three {
-    background-image: url('/assets/images/banner1-5.png');
+    background-image: url('/assets/images/22inch\ IPS\ Monitor.jpg');
 }
 
 .four {
