--- a/src/app/pages/home/index/modal-basic/modal-basic.component.scss
+++ b/src/app/pages/home/index/modal-basic/modal-basic.component.scss
@@ -1,11 +1,12 @@
 
 
 .modal-body {
-    // background-image: linear-gradient(171deg, #27aae1, #002d64);
+    background-color: white;
     padding: 0px;
     max-width: 75%;
     margin: auto;
     border-radius: 5px;
+    width: 80%;
 
     button.btn-close {
         position: absolute;
@@ -14,6 +15,11 @@
         font-size: 30px;
         color: white;
         z-index: 111;
+    }
+
+    .popup-background {
+        background-image: url('/assets/images/popup-background2.jpg');
+        background-size: cover;
     }
     
     .bodymain-div {
@@ -64,13 +70,9 @@
 
 @media screen and (max-width: 576px) {
 
-    // .modal-open .modal {
-    //     display: none;
-    // }
-
     .modal-body {
         padding: 5vw;
-        max-width: 85%;
+        max-width: 100%;
 
         .bodymain-div {    
             .oppupfirst-heading {
