pc monitor not working

--- a/src/app/shared/components/headers/header/header.component.html
+++ b/src/app/shared/components/headers/header/header.component.html
@@ -97,7 +97,7 @@
                         <li class="megamenu-main">Categories <i class="fa-solid fa-chevron-down"></i>
                             <div class="megamenu-child">
                                 <div class="div-category">
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/desktop-ram/3cols/']"
                                         [queryParams]="{category: 1,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -106,7 +106,7 @@
                                             <p>Desktop Ram</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/laptop-ram/3cols/']"
                                         [queryParams]="{category: 4,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -115,7 +115,7 @@
                                             <p>Laptop Ram</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/desktop-hdd/3cols/']"
                                         [queryParams]="{category: 2,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -124,7 +124,7 @@
                                             <p>Desktop HDD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/laptop-hdd/3cols/']"
                                         [queryParams]="{category: 3,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -133,7 +133,7 @@
                                             <p>Laptop HDD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/sata/3cols/']"
                                         [queryParams]="{category: 6,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -142,7 +142,7 @@
                                             <p>SATA SSD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/m-sata-ssd/3cols/']"
                                         [queryParams]="{category: 16,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -151,7 +151,7 @@
                                             <p>M SATA SSD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/m2-ssd/3cols/']"
                                         [queryParams]="{category: 7,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -160,7 +160,7 @@
                                             <p>M.2 SSD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/m2-breakable-ssd/3cols/']"
                                         [queryParams]="{category: 14,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -169,7 +169,7 @@
                                             <p>M.2 BREAKABLE SSD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/nvme-ssd/3cols/']"
                                         [queryParams]="{category: 8,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -179,7 +179,7 @@
                                             <p>NVME SSD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/riser-card/3cols/']"
                                         [queryParams]="{category: 5,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -189,7 +189,7 @@
                                             <p>RISER CARD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/usb-adapter/3cols/']"
                                         [queryParams]="{category: 10,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -199,7 +199,7 @@
                                             <p>WIFI USB ADAPTER</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/ssd-enclosure/3cols/']"
                                         [queryParams]="{category: 18,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -208,7 +208,7 @@
                                             <p>SSD ENCLOSURE</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/pci-card/3cols/']"
                                         [queryParams]="{category: 17,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -217,7 +217,7 @@
                                             <p>PCI CARDS</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/smps/3cols/']"
                                         [queryParams]="{category: 22,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -226,7 +226,7 @@
                                             <p>SMPS</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/printer-toner/3cols/']"
                                         [queryParams]="{category: 15,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -235,7 +235,7 @@
                                             <p>PRINTER TONER</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/pc-monitor/3cols/']"
                                         [queryParams]="{category: 11,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -244,7 +244,7 @@
                                             <p>PC MONITORS</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/graphic-card/3cols/']"
                                         [queryParams]="{category: 12,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -254,7 +254,7 @@
                                             <p>GRAPHIC CARD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/motherboard/3cols/']"
                                         [queryParams]="{category: 13,'page':1}">
                                         <div class="extra">
                                             <div class="image">
@@ -263,14 +263,14 @@
                                             <p>MOTHERBOARD</p>
                                         </div>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                    <div class="menu-cat-image" [routerLink]="['shop/keyboard-and-mouse/3cols/']"
                                         [queryParams]="{category: 23,'page':1}">
                                         <div class="extra">
                                             <div class="image">
                                                 <img src="./assets/images/pcategory/keyboard-mouse.jpeg"
                                                     class="img-fluid">
                                             </div>
-                                            <p>KAYRBOARD AND MOUSE</p>
+                                            <p>KEYRBOARD AND MOUSE</p>
                                         </div>
                                     </div>
                                 </div>
