--- a/src/app/shared/components/headers/shared/category-menu/category-menu.component.html
+++ b/src/app/shared/components/headers/shared/category-menu/category-menu.component.html
@@ -25,12 +25,12 @@
                         <i class="fa-solid fa-chevron-right"></i>
                         <div class="subcate">
                             <li>
-                                <a routerLink="/shop/Desktop RAM/3cols/" [queryParams]="{category: 1,'page':1}">
+                                <a routerLink="/shop/desktop-ram/3cols/" [queryParams]="{category: 1,'page':1}">
                                     Desktop RAM
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/Laptop RAM/3cols/" [queryParams]="{category: 4,'page':1}">
+                                <a routerLink="/shop/laptop-ram/3cols/" [queryParams]="{category: 4,'page':1}">
                                     Laptop RAM
                                 </a>
                             </li>
@@ -46,12 +46,12 @@
                         <i class="fa-solid fa-chevron-right"></i>
                         <div class="subcate">
                             <li>
-                                <a routerLink="/shop/HDD/3cols/" [queryParams]="{category: 2,'page':1}">
+                                <a routerLink="/shop/hdd/3cols/" [queryParams]="{category: 2,'page':1}">
                                     Desktop HDD
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/Laptop HDD/3cols/" [queryParams]="{category: 3,'page':1}">
+                                <a routerLink="/shop/laptop-hdd/3cols/" [queryParams]="{category: 3,'page':1}">
                                     Laptop HDD
                                 </a>
                             </li>
@@ -67,27 +67,27 @@
                         <i class="fa-solid fa-chevron-right"></i>
                         <div class="subcate">
                             <li>
-                                <a routerLink="/shop/SSD SATA/3cols/" [queryParams]="{category: 6,'page':1}">
+                                <a routerLink="/shop/ssd-sata/3cols/" [queryParams]="{category: 6,'page':1}">
                                     SATA SSD
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/M SATA/3cols/" [queryParams]="{category: 16,'page':1}">
+                                <a routerLink="/shop/m-sata-ssd/3cols/" [queryParams]="{category: 16,'page':1}">
                                     M Sata SSD
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/SSD M.2/3cols/" [queryParams]="{category: 7,'page':1}">
+                                <a routerLink="/shop/m2-ssd/3cols/" [queryParams]="{category: 7,'page':1}">
                                     M.2 SSD
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/SSD M.2 BREAKABLE/3cols/" [queryParams]="{category: 14,'page':1}">
+                                <a routerLink="/shop/m2-breakable-ssd/3cols/" [queryParams]="{category: 14,'page':1}">
                                     M.2 Breakable SSD
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/SSD NVMe/3cols/" [queryParams]="{category: 8,'page':1}">
+                                <a routerLink="/shop/nvme-ssd/3cols/" [queryParams]="{category: 8,'page':1}">
                                     NVMe SSD
                                 </a>
                             </li>
@@ -103,32 +103,32 @@
                         <i class="fa-solid fa-chevron-right"></i>
                         <div class="subcate">
                             <li>
-                                <a routerLink="/shop/Riser Card/3cols/" [queryParams]="{category: 5,'page':1}">
+                                <a routerLink="/shop/riser-card/3cols/" [queryParams]="{category: 5,'page':1}">
                                     Riser Card
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/USB Adapter/3cols/" [queryParams]="{category: 10,'page':1}">
+                                <a routerLink="/shop/usb-adapter/3cols/" [queryParams]="{category: 10,'page':1}">
                                     Wifi USB Adapter
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/Laptop RAM/3cols/" [queryParams]="{category: 18,'page':1}">
+                                <a routerLink="/shop/ssd-enclosure/3cols/" [queryParams]="{category: 18,'page':1}">
                                     SSD Enclosure
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/External SSD M.2/3cols/" [queryParams]="{category: 19,'page':1}">
+                                <a routerLink="/shop/m2-external-ssd/3cols/" [queryParams]="{category: 19,'page':1}">
                                     External SSD M.2
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/External SSD NVMe/3cols/" [queryParams]="{category: 20,'page':1}">
+                                <a routerLink="/shop/nvme-extaernal-ssd/3cols/" [queryParams]="{category: 20,'page':1}">
                                     External SSD NVMe
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/External SSD SATA/3cols/" [queryParams]="{category: 21,'page':1}">
+                                <a routerLink="/shop/sata-external-ssd/3cols/" [queryParams]="{category: 21,'page':1}">
                                     External SSD SATA
                                 </a>
                             </li>
@@ -144,17 +144,17 @@
                         <i class="fa-solid fa-chevron-right"></i>
                         <div class="subcate">
                             <li>
-                                <a routerLink="/shop/PCI Cards/3cols/" [queryParams]="{category: 17,'page':1}">
+                                <a routerLink="/shop/pci-card/3cols/" [queryParams]="{category: 17,'page':1}">
                                     PCI Cards
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/SMPS/3cols/" [queryParams]="{category: 22,'page':1}">
+                                <a routerLink="/shop/smps/3cols/" [queryParams]="{category: 22,'page':1}">
                                     SMPS
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/shop/Printer Toner/3cols/" [queryParams]="{category: 15,'page':1}">
+                                <a routerLink="/shop/printer-toner/3cols/" [queryParams]="{category: 15,'page':1}">
                                     Printer Toner
                                 </a>
                             </li>
@@ -162,7 +162,7 @@
                     </a>
                 </li>
                 <li class="item-lead" routerLinkActive="active">
-                    <a routerLink="/shop/PC Monitors/3cols/" [queryParams]="{category: 11,'page':1}">
+                    <a routerLink="/shop/pc-monitor/3cols/" [queryParams]="{category: 11,'page':1}">
                         <div>
                             <img src="/assets/images/icons/monitor.png" class="img-fluid">
                             PC Monitors
@@ -170,7 +170,7 @@
                     </a>
                 </li>
                 <li class="item-lead" routerLinkActive="active">
-                    <a routerLink="/shop/Graphic Card/3cols/" [queryParams]="{category: 12,'page':1}">
+                    <a routerLink="/shop/graphic-card/3cols/" [queryParams]="{category: 12,'page':1}">
                         <div>
                             <img src="/assets/images/icons/gpu.png" class="img-fluid">
                             Graphic Card
@@ -178,7 +178,7 @@
                     </a>
                 </li>
                 <li class="item-lead" routerLinkActive="active">
-                    <a routerLink="/shop/Graphic Card/3cols/" [queryParams]="{category: 13,'page':1}">
+                    <a routerLink="/shop/motherboard/3cols/" [queryParams]="{category: 13,'page':1}">
                         <div>
                             <img src="/assets/images/icons/motherboard.png" class="img-fluid">
                             Motherboard
