--- a/src/app/shared/components/headers/shared/mobile-menu/mobile-menu.component.html
+++ b/src/app/shared/components/headers/shared/mobile-menu/mobile-menu.component.html
@@ -25,13 +25,13 @@
                                 </a>
                                 <ul>
                                     <div class="row px-3 mb-2" >
-                                        <div class="col-4 text-center" routerLink="/shop/Desktop RAM/3cols/" [queryParams]="{category: 1,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/desktop-ram/3cols/" [queryParams]="{category: 1,'page':1}">
                                                 <div class="product-image-div">
                                                     <img src="/assets/images/pcategory/desktopram.png" class="img-fluid">
                                                 </div>
                                                 <p>Desktop RAM</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/Laptop RAM/3cols/" [queryParams]="{category: 4,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/laptop-ram/3cols/" [queryParams]="{category: 4,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/laptopram.png" class="img-fluid">
                                             </div>
@@ -48,13 +48,13 @@
                                 </a>
                                 <ul>
                                     <div class="row px-3 mb-2">
-                                        <div class="col-4 text-center" routerLink="/shop/HDD/3cols/" [queryParams]="{category: 2,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/hdd/3cols/" [queryParams]="{category: 2,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/desktophdd.png" class="img-fluid">
                                             </div>
                                             <p>Desktop HDD</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/Laptop HDD/3cols/" [queryParams]="{category: 3,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/laptop-hdd/3cols/" [queryParams]="{category: 3,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/laptophdd.png" class="img-fluid">
                                             </div>
@@ -71,31 +71,31 @@
                                 </a>
                                 <ul>
                                     <div class="row px-3 mb-2">
-                                        <div class="col-4 text-center" routerLink="/shop/SSD SATA/3cols/" [queryParams]="{category: 6,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/ssd-sata/3cols/" [queryParams]="{category: 6,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/sata.png" class="img-fluid">
                                             </div>
                                             <p>SATA SSD</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/M SATA/3cols/" [queryParams]="{category: 16,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/m-sata-ssd/3cols/" [queryParams]="{category: 16,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/M SATA.png" class="img-fluid">
                                             </div>
                                             <p>M SATA SSD</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/SSD M.2/3cols/" [queryParams]="{category: 7,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/m2-ssd/3cols/" [queryParams]="{category: 7,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/m.2 ssd.png" class="img-fluid">
                                             </div>
                                             <p>M.2 SSD</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/SSD M.2 BREAKABLE/3cols/" [queryParams]="{category: 14,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/m2-breakable-ssd/3cols/" [queryParams]="{category: 14,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/BREAKABLESSD.png" class="img-fluid">
                                             </div>
                                             <p>M.2 Breakable SSD</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/SSD NVMe/3cols/" [queryParams]="{category: 8,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/nvme-ssd/3cols/" [queryParams]="{category: 8,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/ssd nvme.png" class="img-fluid">
                                             </div>
@@ -112,39 +112,39 @@
                                 </a>
                                 <ul>
                                     <div class="row px-3 mb-2">
-                                        <div class="col-4 text-center" routerLink="/shop/Riser Card/3cols/" [queryParams]="{category: 5,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/riser-card/3cols/" [queryParams]="{category: 5,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/RISER CARD PNG.png"
                                                     class="img-fluid">
                                             </div>
                                             <p>Riser Card</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/USB Adapter/3cols/" [queryParams]="{category: 10,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/usb-adapter/3cols/" [queryParams]="{category: 10,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/WIFI ADAPTER PNG.png"
                                                     class="img-fluid">
                                             </div>
                                             <p>Wifi USB Adapter</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/Laptop RAM/3cols/" [queryParams]="{category: 18,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/ssd-enclosure/3cols/" [queryParams]="{category: 18,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/ecclouser.png" class="img-fluid">
                                             </div>
                                             <p>SSD Enclosure</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/External SSD M.2/3cols/" [queryParams]="{category: 19,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/m2-external-ssd/3cols/" [queryParams]="{category: 19,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/M.2 enclosure.png" class="img-fluid">
                                             </div>
                                             <p>External SSD M.2</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/External SSD NVMe/3cols/" [queryParams]="{category: 20,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/nvme-extaernal-ssd/3cols/" [queryParams]="{category: 20,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/nvme menclosure.png" class="img-fluid">
                                             </div>
                                             <p>External SSD NVMe</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/External SSD SATA/3cols/" [queryParams]="{category: 21,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/sata-external-ssd/3cols/" [queryParams]="{category: 21,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/sata enclosure.png" class="img-fluid">
                                             </div>
@@ -161,19 +161,19 @@
                                 </a>
                                 <ul>
                                     <div class="row px-3 mb-2">
-                                        <div class="col-4 text-center" routerLink="/shop/PCI Cards/3cols/" [queryParams]="{category: 17,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/pci-card/3cols/" [queryParams]="{category: 17,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/pci.png" class="img-fluid">
                                             </div>
                                             <p>PCI Cards</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/SMPS/3cols/" [queryParams]="{category: 22,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/smps/3cols/" [queryParams]="{category: 22,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/smps.png" class="img-fluid">
                                             </div>
                                             <p>SMPS</p>
                                         </div>
-                                        <div class="col-4 text-center" routerLink="/shop/Printer Toner/3cols/" [queryParams]="{category: 15,'page':1}">
+                                        <div class="col-4 text-center" routerLink="/shop/printer-toner/3cols/" [queryParams]="{category: 15,'page':1}">
                                             <div class="product-image-div">
                                                 <img src="/assets/images/pcategory/2365 PRINTER.png" class="img-fluid">
                                             </div>
@@ -183,27 +183,26 @@
                                 </ul>
                             </li>
                             <li>
-                                <a class="drop-mobile-menu" routerLink="/shop/PC Monitors/3cols/" [queryParams]="{category: 11,'page':1}">
+                                <a class="drop-mobile-menu" routerLink="/shop/pc-monitor/3cols/" [queryParams]="{category: 11,'page':1}">
                                     <img src="/assets/images/icons/monitor.png" class="img-fluid">
                                     PC Monitors
                                 </a>
                             </li>
                             <li>
-                                <a class="drop-mobile-menu" routerLink="/shop/Graphic Card/3cols/" [queryParams]="{category: 12,'page':1}">
+                                <a class="drop-mobile-menu" routerLink="/shop/graphic-card/3cols/" [queryParams]="{category: 12,'page':1}">
                                     <img src="/assets/images/icons/gpu.png" class="img-fluid">
                                     Graphic card
                                 </a>
                             </li>
                             <li>
-                                <a class="drop-mobile-menu" routerLink="/shop/Graphic Card/3cols/" [queryParams]="{category: 13,'page':1}">
+                                <a class="drop-mobile-menu" routerLink="/shop/motherboard/3cols/" [queryParams]="{category: 13,'page':1}">
                                     <img src="/assets/images/icons/motherboard.png" class="img-fluid">
                                     Motherboard
                                 </a>
                             </li>
                             <li>
                                 <a class="drop-mobile-menu" routerLink="/shop/keyboard-and-mouse/3cols/" [queryParams]="{category: 23,'page':1}">
-                                    <img src="/assets/images/icons/keyboard-and-mouse.png" class="img-fluid">
-                                    Keyboard/Mouse
+                                    <img src="/assets/images/icons/keyboard-and-mouse.png" class="img-fluid">Keyboard/Mouse
                                 </a>
                             </li>
                         </ul>
